# ScorpioConversion

./: .gitignore  .gitmodules  README.md  ScorpioConversion.sln  ScorpioProto-CPP.sln  ScorpioProto.sln  Table.cs  Table.h  XML_Conversion.sln  add.bat  build.ps1  go.mod  pull.bat  push.bat
Commons/: ScorpioReader.cs  ScorpioSerializer.cs  ScorpioSerializer.java  ScorpioUtil.cs  ScorpioUtil.java  ScorpioWriter.cpp
Conversion/: ScorpioConversion.sln  ScorpioConversionGTK.sln
ConversionBackup/: ScorpioConversion.sln  ScorpioConversionGTK.userprefs
Message/: IMessage.cs  IMessage.java
Release/: info.txt
Sample/: InitConfig.ini  PathConfig.ini  Spawn_Test1.data  Spawn_Test2.data  Test.data  language.json  test.ps1
Scorpio.Conversion.Runtime/: Test.data
Scorpio.Conversion.Runtime/CPP/Scorpio.Conversion.Runtime/: CMakeLists.txt  ConversionUtil.cpp  ConversionUtil.h  DefaultReader.cpp  DefaultReader.h  IData.h  IReader.cpp  IReader.h  ITable.cpp  ITable.h
ScorpioConversion/: .gitignore  FormLanguage.Designer.cs  FormLanguage.cs  FormLog.Designer.cs  FormLog.cs  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormPath.Designer.cs  FormPath.cs  IGenerate.cs  Logger.cs  Program.cs  ScorpioConversion.csproj  ScorpioConversion.sln  language.json
ScorpioProto/: .classpath  .project  ScorpioProto.csproj  ScorpioProto.vcxproj  Test.data  Test1.data  build.xml
ScorpioProto-CPP/: ScorpioProto-CPP.vcxproj
Table/: IData.cs  ITable.java  TableUtil.cs  TableUtil.java
Tools/: Install.aip  build.ps1  publish.ps1
XML_Conversion/: CodeProvider.cs  FormLanguage.cs  (+10 more)
(+842 files in other folders)
